# ollama-forge

./: .gitignore  .ollama-forge-last-plan.json  CHANGELOG.md  README.md  pyproject.toml
.githooks/: README.md  pre-commit  pre-push
.github/workflows/: test.yml
docs/: ABLITERATE.md  ADAPTER.md  AGENT-MEMORY.md  ANALYSIS-FEATURES-ABLITERATION-AND-CODEBASE.md  CI_EXAMPLE.md  DATAGEN-ANALYSIS.md  DOWNSIZE.md  GETTING_STARTED.md  HF_TO_OLLAMA.md  LLM-SECURITY-EVAL-REVIEW.md  MODELFILE.md  PHASE1_TASKS.md  PHASE2_TASKS.md  PHASE3_TASKS.md  PHASE4_TASKS.md  PHASE5_TASKS.md  PROJECT-ANALYSIS.md  QUANTIZATION.md  RECIPE.md  RETRAIN.md  ROADMAP.md  SECURITY-EVAL-AND-PLATFORM-VISION.md  SIMPLICITY_ANALYSIS.md  TRAIN-RETRAIN-ANALYSIS-AND-UX.md  TRAINING_DATA.md  Wiki-README.md  suggestions.md
examples/downsize/: README.md
examples/recipes/: README.md  downsize-student.yaml  from-gguf.yaml  from-hf.yaml  simple-base.yaml
scripts/: lint-fix.sh
src/ollama_forge/: __init__.py  abliterate.py  abliterate_defaults.py  abliterate_proxy.py  abliterate_serve.py  chat_util.py  cli.py  config_loader.py  hf_fetch.py  http_util.py  log.py  model_family.py  modelfile.py  recipe.py  run_helpers.py  training_data.py
src/ollama_forge/data/: README.md  abliterate_harmful_curated.txt  abliterate_harmless_curated.txt  abliterate_harmless_default.txt  refusal_markers.txt
src/ollama_forge/security_eval/: README.md  __init__.py  app.py  client.py  history.py  loader.py  run.py  scorers.py
src/ollama_forge/security_eval/data/: sample_indirect.jsonl  sample_prompts.txt  system_prompt_extraction.jsonl
src/ollama_tools/: abliterate.py  abliterate_defaults.py  abliterate_serve.py  cli.py  hf_fetch.py  modelfile.py  recipe.py  run_helpers.py
src/ollama_tools/data/: abliterate_harmful_default.txt  abliterate_harmless_default.txt
src/ollama_tools/security_eval/: README.md  __init__.py  app.py  client.py  history.py  loader.py  run.py
src/ollama_tools/security_eval/data/: sample_prompts.jsonl
tests/: __init__.py  test_abliterate.py  test_abliterate_pipeline.py  test_abliterate_proxy.py  test_abliterate_serve.py  test_chat_util.py  test_cli.py  test_config_loader.py  test_hf_fetch.py  test_http_util.py  test_model_family.py  test_modelfile.py  test_recipe.py  test_run_helpers.py  test_security_eval.py  test_training_data.py
wiki/: Abliterate.md  Adapters.md  Auto-and-Plan.md  CI-Automation.md  Command-Reference.md  Downsizing.md  Fetch-and-Convert.md  Heretic-Integration.md  Home.md  Hugging-Face-Without-GGUF.md  Installation.md  Modelfile.md  Prompt-Set-Registry.md  Quantization.md  Quick-Start.md  README.md  Recipes.md  Retrain-Pipeline.md  Security-Eval.md  Security-and-Abliteration-Pipeline.md  Training-Data.md  _Sidebar.md
