[project]
name = "ollama-tools"
version = "1.0.0"
description = "Create, retrain, ablate, and convert models for local Ollama"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "huggingface_hub>=0.20.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "hf-transfer>=0.1.0",  # fast Hugging Face downloads (auto-enabled)
]

[project.optional-dependencies]
abliterate = ["torch>=2.0", "transformers>=4.36", "accelerate>=0.25"]

[project.scripts]
ollama-tools = "ollama_tools.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ollama_tools"]

[tool.uv]
dev-dependencies = [
    "pytest>=7",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I"]
