[project]
name = "ollama-forge"
version = "1.0.0"
description = "Create, retrain, ablate, and convert models for local Ollama"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "huggingface_hub>=0.20.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "hf-transfer>=0.1.0",  # fast Hugging Face downloads (auto-enabled)
]

[project.optional-dependencies]
abliterate = ["torch>=2.0", "transformers>=4.36", "accelerate>=0.25", "gguf>=0.10.0"]
security-eval-ui = ["streamlit>=1.28", "pandas>=2.0", "plotly>=5.18"]

[project.scripts]
ollama-forge = "ollama_forge.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ollama_forge"]

[tool.uv]
dev-dependencies = [
    "pytest>=7",
    "ruff>=0.4",
    "twine>=6.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I"]
